Fixed hero section creating a horizontal scrollbar on chromium.

--- a/src/hero.css
+++ b/src/hero.css
@@ -1,6 +1,6 @@
 .hero {
     position: relative;
-    width: 100vw;
+    width: 100%;
     min-height: 100svh;
     height: fit-content;
 }
